# scene-intelligence

./: .gitignore  MANIFEST.in  README.md  install.bat  install.ps1  install.sh  pyproject.toml  requirements.txt  run-webcam-debug.bat  run-webcam.bat  run-webcam.ps1  run-webcam.sh
scene_intelligence/: __init__.py  app.py  scene_engine.py
